--- a/src/Pages/Queue/FindPlayers/styles.module.css
+++ b/src/Pages/Queue/FindPlayers/styles.module.css
@@ -8,15 +8,19 @@
     margin: 0px;
 }
 
+.clip_container{
+    grid-column: 1/5;
+    justify-self: center;
+}
 
 @media(max-width: 830px){
-    .desc{
+    .desc, .clip_container{
         grid-column: 1/4;
     }
 }
 
 @media(max-width: 600px){
-    .desc{
+    .desc, .clip_container{
         grid-column: 1/3;
     }
 }
@@ -27,5 +31,9 @@
         grid-column: 1/2;
         font-size: 1rem;
         text-align: center;
+    }
+
+    .clip_container{
+        grid-column: 1/2;
     }
 }
