--- a/src/Pages/Chessboard/styles.module.css
+++ b/src/Pages/Chessboard/styles.module.css
@@ -1,6 +1,6 @@
 .chess{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 80px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,5 +43,11 @@
         width: 100%;
         height: 100vw;
         transition: all 0.2s linear, height 0s;
+    }
+}
+
+@media(max-width: 600px){
+    .chess{
+        height: calc(100vh - 60px);
     }
 }
