--- a/src/Pages/Queue/FindPlayers/DisplayPlayer/styles.module.css
+++ b/src/Pages/Queue/FindPlayers/DisplayPlayer/styles.module.css
@@ -19,7 +19,8 @@
 }
 
 .queue_player_image{
-    width: 100px;
+    height: 100px;
+    border-radius: 20px;
     object-fit: contain;
     align-self: center;
 }
@@ -51,6 +52,6 @@
     }
 
     .queue_player_image{
-        width: 80px;
+        height: 80px;
     }
 }
